apps/staging/python-rest-api/service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-app-python
  labels:
    name: app-python-staging
    app: app-python-staging
spec:
  selector:
    name: app-python-staging
