apps/staging/python-rest-api/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-app-python
  labels:
    name: ingress-python-production
